# yara-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
demo/: index.html
demo-extension/: background.html  background.js  manifest.json  popup.html  popup.js  yara_rs.js  yara_rs_bg.wasm
src/: lib.rs  yara.rs
src/yara/: matcher.rs  mod.rs  parser.rs
tests/: rules.yara  wasm.rs
yara-macro/: Cargo.toml
yara-macro/src/: lib.rs
yara-rs-fastly/: .gitignore  Cargo.toml  fastly.toml  shell.nix
yara-rs-fastly/src/: config.rs  main.rs
