[package]
name = "yara"
version = "0.1.0"
authors = ["Dave King <dave@davbo.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pom = "3.1.0"
wasm-bindgen = "0.2.58"
hex = "0.4.1"
regex = "1.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
