[package]
name = "yara"
version = "0.1.0"
authors = ["Dave King <dave@davbo.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pom = "3.1.0"
hex = "0.4.1"
regex = "1.3.4"
quote = "1.0.14"

[workspace]
members = ["yara-rs-fastly", "yara-macro"]
