[package]
name = "yara-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
yara = { path = "../" }
nom = "7.1.0"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
